Hero section done

--- a/index.html
+++ b/index.html
@@ -39,9 +39,19 @@
       
         <div class="image"> 
           
-        <img  src="./assets/hero-circle.png" alt="">
-        <img  src="./assets/microphone.png" alt="">  
+        <img class="hero-image" src="./assets/hero-circle.png" alt="">
+        <img class="hero-image" src="./assets/microphone.png" alt="">  
         <h6 class="new">NEW</h6>
+    </div>
+
+    <div class="txt">
+        <h1>TechWave</h1>
+        <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+        <div class="btn">
+            <button class="button" id="B01"><img class="spotify" src="./assets/spotify.png" alt="">        Listen On Spotify</button>
+
+            <button class="msg"><img  src="./assets/message.png" alt="">                      Subscribe</button>
+        </div>
     </div>
 
 
