--- a/index.html
+++ b/index.html
@@ -133,5 +133,45 @@ Join thousands of young professionals and tech enthusiasts who start their day w
         
      </section>
 
+
+     <section class="videos">
+            <div><h2>Featured Episodes</h2></div>
+<div class="video-container">
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/KKNCiRWd_j0?si=44hIz6c36oSHNIjK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h5>The Future of AI in Everyday life</h5>
+                <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                <p><img src="./assets/clock.png" alt="">42 min</p>
+            </div>
+
+
+
+            <div class="video">
+
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/bdsc3Spm6Sw?si=x-myg5dC3QCo4aZq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h5> Building Better Habits for Remote Work</h5>
+                <p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                <p><img src="./assets/clock.png" alt="">35 min</p>
+
+            </div>
+
+
+
+
+            <div class="video">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/fZmQ_aPXJAM?si=ZR8OMXogbAMqBopr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <h5>Career Growth in Tech: A Roadmap</h5>
+                <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                <p><img src="./assets/clock.png" alt=""> 51 min</p>
+
+
+            </div>
+
+            </div>
+
+
+
+
+     </section>
 </body>
 </html>
