ALhamdulillah Project Done

--- a/index.html
+++ b/index.html
@@ -68,22 +68,23 @@ We break down complex topics into digestible insights, explore productivity stra
 and share stories of personal growth from industry leaders.
 <br><br><br>
 Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
-
+<br><br><br>
 <hr>
-
+<br><br><br>
 <div class="points">
-    <div class="P-tag">
-        <h1>150K+</h1><p class="P-tag">MONTHLY LISTENER</p>
+    <div class="box">
+        <h1>150K+</h1>
+        <p class="P-tag">MONTHLY LISTENER</p>
     </div>
-    <div class="P-tag" class="box">
+    <div  class="box">
         <h1>200+</h1>
         <p> EPISODES PUBLISHED</p>
     </div>
-    <div class="P-tag" class="box">
+    <div  class="box">
         <h1>4.9 ★</h1>
         <p>AVERAGE RATING</p>
     </div>
-    <div class="P-tag" class="box">
+    <div  class="box">
         <h1>50+</h1>
         <p>INDUSTRY EXPERT</p>
     </div>
@@ -139,9 +140,9 @@ Join thousands of young professionals and tech enthusiasts who start their day w
 <div class="video-container">
             <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/KKNCiRWd_j0?si=44hIz6c36oSHNIjK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <h5>The Future of AI in Everyday life</h5>
+                <h5>The Future of AI <br>in Everyday life</h5>
                 <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
-                <p><img src="./assets/clock.png" alt="">42 min</p>
+                <p class="clock"><img src="./assets/clock.png" alt="">42 min</p>
             </div>
 
 
@@ -151,7 +152,7 @@ Join thousands of young professionals and tech enthusiasts who start their day w
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/bdsc3Spm6Sw?si=x-myg5dC3QCo4aZq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                 <h5> Building Better Habits for Remote Work</h5>
                 <p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
-                <p><img src="./assets/clock.png" alt="">35 min</p>
+                <p class="clock"><img src="./assets/clock.png" alt="">35 min</p>
 
             </div>
 
@@ -160,18 +161,44 @@ Join thousands of young professionals and tech enthusiasts who start their day w
 
             <div class="video">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/fZmQ_aPXJAM?si=ZR8OMXogbAMqBopr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-                <h5>Career Growth in Tech: A Roadmap</h5>
+                <h5>Career Growth in Tech: <br>A Roadmap</h5>
                 <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
-                <p><img src="./assets/clock.png" alt=""> 51 min</p>
+                <p class="clock"><img src="./assets/clock.png" alt=""> 51 min</p>
 
 
             </div>
 
             </div>
+            
+            
 
 
 
+     </section>
 
+     <section class="host-container">
+        <div class="host">
+                <div class="host-img">
+                    <img src="./assets/host.png" alt="">
+                </div>
+
+                <div class="host-details">
+
+                <div class="details">
+                <h2>
+                    Alex Kumar
+                </h2>
+
+                <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                </div> <br>
+                <div class="social-links">
+                    <img  src="./assets/linkedin.png" alt="">
+                    <img src="./assets/x.png" alt="">
+                    <img src="./assets/instagram.png" alt="">
+                    <img src="./assets/youtube.png" alt="">
+                </div></div>
+
+            </div>
      </section>
 </body>
 </html>
