--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@ Join thousands of young professionals and tech enthusiasts who start their day w
      </section>
 
      <section class="host-container">
+        <h1>Meet The Host</h1>
         <div class="host">
                 <div class="host-img">
                     <img src="./assets/host.png" alt="">
